--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,24 +13,34 @@
         android:layout_marginTop="60dp" />
 
     <LinearLayout
-        android:id="@+id/home_reminders"
+        android:id="@+id/home_reminder1"
         android:layout_width="350dp"
         android:layout_height="400dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="400dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/reminderTitle"
+        <LinearLayout
+            android:id="@+id/home_reminder2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="REMINDERS" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Reminder 1" />
+            <TextView
+                android:id="@+id/reminderTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="REMINDERS" />
+
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Reminder 1" />
+
+        </LinearLayout>
     </LinearLayout>
 
 
