--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,7 +32,9 @@
                 android:id="@+id/reminderTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="REMINDERS" />
+                android:text="REMINDERS"
+                android:textSize="25dp"
+                android:textStyle="bold"/>
 
             <CheckBox
                 android:id="@+id/checkBox"
