--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -17,20 +17,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Reminders"
-            android:textSize="24sp" />
+            android:textSize="25dp"
+            android:textStyle="bold"/>
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/reminderLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp" />
+        android:padding="16dp"/>
 
         <Button
             android:id="@+id/addReminder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/baseline_add_circle_outline_24"
-            android:text="Add Reminder" />
+            android:text="Add Reminder"
+            android:textColor="@color/black"
+            android:backgroundTint="@color/agri_green"/>
     </LinearLayout>
 </FrameLayout>
