--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,28 +22,23 @@
         android:layout_marginTop="400dp"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="REMINDERS"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:paddingBottom="10dp" />
+
+        <!-- This layout will contain all the reminders dynamically -->
         <LinearLayout
             android:id="@+id/home_reminder2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/reminderTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="REMINDERS"
-                android:textSize="25dp"
-                android:textStyle="bold"/>
-
-            <CheckBox
-                android:id="@+id/checkBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Reminder 1" />
-
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="60dp"
+            android:padding="16dp">
         </LinearLayout>
+
     </LinearLayout>
-
-
 </FrameLayout>
